--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cookbook-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/cookbook-test",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
